--- a/lmdb.cabal
+++ b/lmdb.cabal
@@ -7,9 +7,12 @@ Description:
   for the OpenLDAP project. LMDB has impressive performance characteristics
   and a friendly BSD-style OpenLDAP license. See <http://symas.com/mdb/>.
   .
-  This library has Haskell bindings to the LMDB library. You must install
-  the lmdb development files before installing this library,
-  e.g. `sudo apt-get install liblmdb-dev` works for Ubuntu 14.04.
+  This library has Haskell bindings to the LMDB library. By default, this
+  library installs a bundled version of LMDB, so you do not need to install
+  LMDB yourself beforehand. Currently, version 0.9.29 of LMDB is bundled.
+  Alternatively, you can make this library link against your system's version
+  of LMDB via @pkg-config@ by enabling the @-fpkg-config@ @cabal@ flag. (For
+  instance, you can install LMDB on Ubuntu with @apt-get install liblmdb-dev@.)
   .
   For now, only a low level interface is provided, and the author is moving
   on to use LMDB rather than further develop its bindings. If a higher level
@@ -26,10 +29,18 @@ license-file: LICENSE
 Stability: experimental
 build-type: Simple
 cabal-version: >= 1.16.0.3
+extra-source-files:
+  README.md
+  cbits/lmdb.h cbits/mdb.c cbits/midl.c cbits/midl.h
 
 Source-repository head
   type: git
   location: http://github.com/dmbarbour/haskell-lmdb.git
+
+flag pkg-config
+  default:     False
+  manual:      True
+  description: Use @pkg-config(1)@ to locate foreign @zlib@ library.
 
 Library
   hs-Source-Dirs: hsrc_lib
@@ -43,9 +54,12 @@ Library
 
   Other-Modules:
 
-  include-dirs:
-  c-sources:
-  extra-libraries: lmdb
+  if flag(pkg-config)
+    pkgconfig-depends: lmdb
+  else
+    include-dirs: cbits
+    install-includes: lmdb.h midl.h
+    c-sources: cbits/mdb.c cbits/midl.c
 
   ghc-options: -Wall
 
