--- a/lmdb-simple/lmdb-simple.cabal
+++ b/lmdb-simple/lmdb-simple.cabal
@@ -77,6 +77,7 @@ test-suite hspec
                      , hspec
                      , lmdb-simple
                      , QuickCheck
+  build-tool-depends:  hspec-discover:hspec-discover
   ghc-options:         -Wall -Wno-unused-do-bind
                        -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
