Put subdirs in source-repository stanzas of .cabal files

--- a/lmdb/lmdb.cabal
+++ b/lmdb/lmdb.cabal
@@ -42,6 +42,7 @@ tested-with:
 Source-repository head
   type: git
   location: https://github.com/GaloisInc/lmdb
+  subdir: lmdb
 
 flag pkg-config
   default:     False
