--- a/lmdb-simple/lmdb-simple.cabal
+++ b/lmdb-simple/lmdb-simple.cabal
@@ -37,6 +37,7 @@ tested-with:
 source-repository head
   type:              git
   location:          https://github.com/GaloisInc/lmdb
+  subdir:            lmdb-simple
 
 library
   hs-source-dirs:      src
