Add regression test for #1

--- a/lmdb-simple/lmdb-simple.cabal
+++ b/lmdb-simple/lmdb-simple.cabal
@@ -73,6 +73,7 @@ test-suite hspec
   main-is:             hspec.hs
   other-modules:       Database.LMDB.SimpleSpec
                        Database.LMDB.Simple.DBRefSpec
+                       T1Spec
                        Harness
   build-depends:       base
                      , hspec
